--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "darkaonline/l5-swagger": "6.*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.1",
         "laravel/framework": "^6.18.35",
