--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "darkaonline/l5-swagger": "6.*",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.1",
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0"
